# homelab-pi-automation

./: .env.example  .gitignore  =2.9.0  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
ansible/: CLAUDE.md  README.md  SSH_KEY_SETUP.md  ansible.cfg  run-playbook.sh
ansible/inventory/: hosts.yml
ansible/playbooks/: db-migrate.yml  deploy.yml  site.yml
api/: CLAUDE.md
api/predecessor/: CLAUDE.md  README.md  __init__.py  client.py  graphql_fragments.py  hero_service.py  item_models.py  item_service.py  match_models.py  match_service.py  models.py  player_matches_service.py  player_service.py  pyproject.toml  utils.py
belica-bot/: .env.example  README.md  SETUP.md  bot.py  download_hero_icons.py  pyproject.toml  requirements.txt  schema.graphql  test_hero_icons.py
belica-bot/api/: __init__.py  client.py
belica-bot/cogs/: __init__.py  general.py  matches.py
belica-bot/models/: __init__.py  match.py
belica-bot/services/: __init__.py  channel_config.py  hero_emoji_mapper.py  hero_registry.py  match_formatter.py  match_service.py  profile_subscription.py  uuid_utils.py
bots/: CLAUDE.md
bots/belica-bot/: .gitignore  CLAUDE.md  README.md  SETUP.md  bot.py  config.py  download_hero_icons.py  profile_subscriptions.json  pyproject.toml  test_hero_icons.py
crons/: CLAUDE.md
crons/predecessor/: .gitignore  CLAUDE.md  README.md  config.py  main.py  pyproject.toml
data/: CLAUDE.md  README.md  __init__.py  alembic.ini  belica_bot.py  config.py  connection.py  predecessor.py  pyproject.toml  repositories.py
data/migrations/: env.py
data/repositories/: __init__.py  player_match_cursor.py  processed_match.py  subscribed_profile.py  target_channel.py
other/: counter_builds.md  fetch_items.py  fetch_match_data.py  instructions.md  itemization_algorithm.md  items.json  items_tagged.json  match_75a755dd-9594-476a-96fc-2f78dfbe8e2d.json  match_75a755dd-9594-476a-96fc-2f78dfbe8e2d_analysis.md  predecessor_item_tags_reference.md  zinx_sustain_burst.md
scripts/: download_augment_icons.py
tests/: conftest.py  test_database.py
(+68 files in other folders)
