[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "belica-bot"
version = "0.1.0"
description = "Discord bot for Predecessor game statistics"
requires-python = ">=3.9"
dependencies = [
    "discord.py>=2.3.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
packages = ["api", "cogs", "models", "services"]

[tool.pylsp]
plugins = {
    "pylint": {
        "enabled": false
    },
    "pycodestyle": {
        "enabled": false
    }
}


